# chatbot

./: .env  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  agent_engine_app.py  deploy.py  mise.toml  pyproject.toml  requirements.txt  skills-lock.json
app/: agent.py  fast_api_app.py  prompt.py  retrievers.py
app/agents/: __init__.py  care_framework_agent.py  general_agent.py
app/app_utils/: telemetry.py  typing.py
deployment/: deploy.py
eval/: test_eval.py
knowledges/: care-framework-core-spec-v0.1.txt
my_chatbot/: .env  agent.py
tests/: test_agent.py
